WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74356
REGRESSION(
r102357
): respondToUnappliedEditing exits early for CreateLinkCommand
https://bugs.webkit.org/show_bug.cgi?id=74356
Summary
REGRESSION(r102357): respondToUnappliedEditing exits early for CreateLinkCommand
Ryosuke Niwa
Reported
2011-12-12 15:12:39 PST
It appears that
r102357
regressed Lion autocorrection panel. After
r102357
, respondToUnappliedEditing always exits early even when unapplying CreateLinkCommand since EditCommandComposition's isCreateLinkCommand return false.
Attachments
fixes the bug
(10.23 KB, patch)
2011-12-12 16:27 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Reveted orthogonal Editor.cpp change
(7.97 KB, patch)
2011-12-12 16:46 PST
,
Ryosuke Niwa
enrica
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2011-12-12 16:16:43 PST
Is there some manual test / DRT test you can run on Lion for this? Unfortunately, I don't have access to Lion machines and I'm fixing this in blind.
Ryosuke Niwa
Comment 2
2011-12-12 16:27:09 PST
Created
attachment 118901
[details]
fixes the bug
Ryosuke Niwa
Comment 3
2011-12-12 16:28:29 PST
Comment on
attachment 118901
[details]
fixes the bug Oops, this patch has some random Editor.cpp change :(
Ryosuke Niwa
Comment 4
2011-12-12 16:46:52 PST
Created
attachment 118907
[details]
Reveted orthogonal Editor.cpp change
Enrica Casucci
Comment 5
2011-12-12 16:53:28 PST
Comment on
attachment 118907
[details]
Reveted orthogonal Editor.cpp change Looks fine to me.
Ryosuke Niwa
Comment 6
2011-12-12 16:59:41 PST
Committed
r102643
: <
http://trac.webkit.org/changeset/102643
>
Ryosuke Niwa
Comment 7
2011-12-12 17:07:34 PST
Thanks for the review. I just wish we could add a test for this (or that we already had one).
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug