REGRESSION(r102357): respondToUnappliedEditing exits early for CreateLinkCommand https://bugs.webkit.org/show_bug.cgi?id=74356

Reviewed by Enrica Casucci.

The problem was that isCreateLinkCommand was called on EditCommandComposition by respondToUnappliedEditing.
Fixed the bug by propagating the value of isCreteLinkCommand from CompositeEditCommand to
EditCommandComposition via wasCreateLinkCommand.

Also move isCreateLinkCommand from EditCommand to CompositeEditCommand to prevent this mistake in the future.

* editing/CompositeEditCommand.cpp:
(WebCore::EditCommandComposition::create):
(WebCore::EditCommandComposition::EditCommandComposition):
(WebCore::CompositeEditCommand::ensureComposition):
(WebCore::CompositeEditCommand::isCreateLinkCommand):
* editing/CompositeEditCommand.h:
(WebCore::EditCommandComposition::wasCreateLinkCommand):
* editing/SpellingCorrectionController.cpp:
(WebCore::SpellingCorrectionController::respondToUnappliedEditing):
* editing/SpellingCorrectionController.h:


Canonical link: https://commits.webkit.org/91035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102643 268f45cc-cd09-0410-ab3c-d52691b4dbfc